# oasis

./: .gitignore  pyproject.toml
generator/twitter/: gen.py  rag.py  requirement.txt
oasis/social_agent/: agent.py  agents_generator.py
oasis/social_platform/: platform.py  process_recsys_posts.py  recsys.py
src/twitter_simulation/: prompts.py  twitter.yaml  twitter_simulation.py
src/vllm_server/: vllm_model_server.sh
test/infra/recsys/: test_recsys.py
